--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<database_name>?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Joloenja:Jolo4792@cluster0.agim6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
