--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-  "dev:server": "node src/server.js"
-},
+    "start": "nodemon src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -12,9 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "9.0.2",
+    "mongodb": "6.13.1",
+    "mongoose": "8.11.0",
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "nodemon": "^3.1.9"
   }
 }
